Verif/Test/Invalide/test_erreur_3.27.deca
// Description:
//    Programme soulevant l'erreur (3.27)
// Resultats:
//    Erreur contextuelle
//    Ligne 12 : Une variable ne peut pas être de type 'void' (règle 3.27)
//
// Attributs: exec correct automatique
//
// Historique:
//    cree le 12/01/2012

void x;
{
}